--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
-    "gsap": "npm:@gsap/shockingly@^3.12.5",
+    "gsap": "file:gsap-bonus.tgz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
